--- a/epidemic_back/pom.xml
+++ b/epidemic_back/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>epidemic-framework</module>
         <module>epidemic-common</module>
+        <module>epidemic-admin</module>
     </modules>
     <packaging>pom</packaging>
 
