架构再优化

--- a/epidemic_back/epidemic-admin/src/main/resources/application.yml
+++ b/epidemic_back/epidemic-admin/src/main/resources/application.yml
@@ -17,7 +17,7 @@ mybatis:
   type-aliases-package: com.cdut.pojo
 spring:
   profiles:
-    include: framework
+    include: framework,system
   redis:
     database: 0
     host: 175.178.92.208
