--- a/epidemic_back/epidemic-framework/pom.xml
+++ b/epidemic_back/epidemic-framework/pom.xml
@@ -26,10 +26,10 @@
 <!--            <artifactId>commons-codec</artifactId>-->
 <!--        </dependency>-->
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-security</artifactId>-->
+<!--        </dependency>-->
 
 
         <dependency>
