--- a/epidemic_syscontrol_back/epidemic-syscontrol-framework/pom.xml
+++ b/epidemic_syscontrol_back/epidemic-syscontrol-framework/pom.xml
@@ -4,33 +4,29 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.cdut</groupId>
-        <artifactId>epidemic</artifactId>
+        <artifactId>epidemic_syscontrol_back</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-
-    <artifactId>epidemic-framework</artifactId>
-
-    <name>epidemic-framework</name>
-    <description>epidemic-framework</description>
+    <artifactId>epidemic-syscontrol-framework</artifactId>
+    <name>epidemic-syscontrol-framework</name>
+    <description>epidemic-syscontrol-framework</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
-
     <dependencies>
-
-
-
-<!--        &lt;!&ndash;MD5加密&ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>commons-codec</groupId>-->
-<!--            <artifactId>commons-codec</artifactId>-->
-<!--        </dependency>-->
-
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>com.cdut</groupId>
-            <artifactId>epidemic-system</artifactId>
+            <artifactId>epidemic-syscontrol-system</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
