--- a/epidemic_syscontrol_back/epidemic-syscontrol-admin/pom.xml
+++ b/epidemic_syscontrol_back/epidemic-syscontrol-admin/pom.xml
@@ -41,11 +41,11 @@
             <artifactId>epidemic-syscontrol-system</artifactId>
             <version>${project.version}</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>com.cdut</groupId>-->
-<!--            <artifactId>epidemic-framework</artifactId>-->
-<!--            <version>${project.version}</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>com.cdut</groupId>
+            <artifactId>epidemic-syscontrol-framework</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
