--- a/epidemic_syscontrol_back/epidemic-syscontrol-framework/pom.xml
+++ b/epidemic_syscontrol_back/epidemic-syscontrol-framework/pom.xml
@@ -25,6 +25,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.cdut</groupId>
             <artifactId>epidemic-syscontrol-system</artifactId>
             <version>${project.version}</version>
