完成部署前置工作 (#13)
* 完成初始化基本功能

* 封装响应体

* 完成响应封装

* 修复idea文件bug,增加分页

* 架构优化

* 架构再优化

* README

* README

* 增加后台管理

* 增加后台管理模块

* 后台管理新增权限系统

* 后台管理完成登录登出、处理异常功能

* 完成头像上传及其获取功能，完成后台接口设计

--- a/epidemic_syscontrol_back/epidemic-syscontrol-admin/pom.xml
+++ b/epidemic_syscontrol_back/epidemic-syscontrol-admin/pom.xml
@@ -55,6 +55,17 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.cdut.EpidemicSyscontrolAdminApplication</mainClass>
+                    <fork>true</fork>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
