--- a/epidemic_syscontrol_back/epidemic-syscontrol-admin/src/main/resources/application.yml
+++ b/epidemic_syscontrol_back/epidemic-syscontrol-admin/src/main/resources/application.yml
@@ -1,32 +1,6 @@
-server:
-  port: 8080
-springdoc:
-  swagger-ui:
-    path: swagger
-  packages-to-scan: com.cdut
-  paths-to-match: /*
-
-
-
-
-#logging:
-#  config: classpath:log4j2.xml
-
-mybatis:
-  mapper-locations: classpath*:mapper/*.xml
-  type-aliases-package: com.cdut.pojo
 spring:
   profiles:
-    include: framework,system
-  redis:
-    database: 0
-#    host: 175.178.92.208
-    host: 127.0.0.1
-    port: 6379
-    timeout: 5000
-  servlet:
-    multipart:
-      max-file-size: 10MB
-      max-request-size: 100MB
+    active: dev
+
 
 
