--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,28 @@
 version: 'latest'
 services:
-#  userSystem:
-#    image: userSystem
-#    container_name: my_user_system
-#    build:
-#      context: ./
-#      dockerfile: Dockerfile-userSystem
-#    ports:
-#      - "8088:8088"
-#    expose:
-#      - "8088"
-#    depends_on:
-#      - redis
-#    networks:
-#      - back_network
+  userSystem:
+    image: userSystem
+    container_name: my_user_system
+    build:
+      context: ./
+      dockerfile: Dockerfile-userSystem
+    ports:
+      - "8088:8088"
+    expose:
+      - "8088"
+    depends_on:
+      - redis
+    networks:
+      - back_network
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
   sysControl:
     image: syscontrol
     container_name: my_sys_control
-    build: .
+    build:
+      context: ./
+      dockerfile: Dockerfile-sysControl
     ports:
       - "11451:11451"
     expose:
@@ -28,7 +32,7 @@ services:
     networks:
       - back_network
     extra_hosts:
-      - "host.docker.intern54al:host-gateway"
+      - "host.docker.internal:host-gateway"
     volumes:
       - /opt/avatar:/opt/avatar
 
