--- a/epidemic_back/epidemic-admin/src/main/resources/application-dev.yml
+++ b/epidemic_back/epidemic-admin/src/main/resources/application-dev.yml
@@ -1,16 +1,32 @@
+server:
+  port: 8088
+springdoc:
+  swagger-ui:
+    path: swagger
+  packages-to-scan: com.cdut
+  paths-to-match: /*
+
+
+
+
+logging:
+  config: classpath:log4j2.xml
+
+mybatis:
+  mapper-locations: classpath*:mapper/*.xml
+  type-aliases-package: com.cdut.pojo
 spring:
   redis:
     database: 0
     host: 175.178.92.208
     port: 6379
+    jedis:
+      pool:
+        max-active: 8
+        max-wait: 1
+        max-idle: 8
+        min-idle: 0
     timeout: 5000
-    password: hoshino12@!
-
-  servlet:
-    multipart:
-      max-file-size: 10MB
-      max-request-size: 100MB
-
   datasource:
     druid:
       username: root
@@ -34,13 +50,3 @@ spring:
       connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
-
-
-
-file:
-  location: D:/avatar
-  path: /avatar/**
-
-front:
-  host: localhost
-  port: 8088
