--- a/epidemic_back/epidemic-admin/src/main/resources/application-prod.yml
+++ b/epidemic_back/epidemic-admin/src/main/resources/application-prod.yml
@@ -1,9 +1,34 @@
+server:
+  port: 8088
+springdoc:
+  swagger-ui:
+    path: swagger
+  packages-to-scan: com.cdut
+  paths-to-match: /*
+
+logging:
+  config: classpath:log4j2.xml
+
+mybatis:
+  mapper-locations: classpath*:mapper/*.xml
+  type-aliases-package: com.cdut.pojo
 spring:
+  redis:
+    database: 0
+    host: myredis
+    port: 6379
+    jedis:
+      pool:
+        max-active: 8
+        max-wait: 1
+        max-idle: 8
+        min-idle: 0
+    timeout: 5000
   datasource:
     druid:
       username: root
       password: 123456
-      url: jdbc:mysql://localhost:3306/epidemic?useSSL=false&useUnicode=true&characterEncoding=utf-8
+      url: jdbc:mysql://host.docker.internal:3306/epidemic?useSSL=false&useUnicode=true&characterEncoding=utf-8
       initialSize: 5
       minIdle: 5
       maxActive: 20
