--- a/epidemic_back/epidemic-admin/src/main/resources/application.yml
+++ b/epidemic_back/epidemic-admin/src/main/resources/application.yml
@@ -1,31 +1,3 @@
-server:
-  port: 8088
-springdoc:
-  swagger-ui:
-    path: swagger
-  packages-to-scan: com.cdut
-  paths-to-match: /*
-
-
-
-
-logging:
-  config: classpath:log4j2.xml
-
-mybatis:
-  mapper-locations: classpath*:mapper/*.xml
-  type-aliases-package: com.cdut.pojo
 spring:
   profiles:
-    include: framework,system
-  redis:
-    database: 0
-    host: 175.178.92.208
-    port: 6379
-    jedis:
-      pool:
-        max-active: 8
-        max-wait: 1
-        max-idle: 8
-        min-idle: 0
-    timeout: 5000
+    active: dev
