--- a/epidemic_syscontrol_back/epidemic-syscontrol-admin/src/main/resources/application-dev.yml
+++ b/epidemic_syscontrol_back/epidemic-syscontrol-admin/src/main/resources/application-dev.yml
@@ -1,3 +1,5 @@
+
+
 spring:
   redis:
     database: 0
@@ -27,7 +29,6 @@ spring:
       testOnBorrow: false
       testOnReturn: false
       poolPreparedStatements: true
-      #   ?????????filters????????sql?????'wall'?????
       filters: stat,wall
       maxPoolPreparedStatementPerConnectionSize: 20
       useGlobalDataSourceStat: true
@@ -44,3 +45,5 @@ file:
 front:
   host: localhost
   port: 8088
+server:
+  port: 11451
