完成部署工作

--- a/epidemic_back/epidemic-admin/src/main/resources/application-prod.yml
+++ b/epidemic_back/epidemic-admin/src/main/resources/application-prod.yml
@@ -13,6 +13,8 @@ mybatis:
   mapper-locations: classpath*:mapper/*.xml
   type-aliases-package: com.cdut.pojo
 spring:
+  application:
+    name: my_user_system
   redis:
     database: 0
     host: myredis
