--- a/epidemic_back/epidemic-admin/src/main/resources/application-dev.yml
+++ b/epidemic_back/epidemic-admin/src/main/resources/application-dev.yml
@@ -50,3 +50,5 @@ spring:
       connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
+  application:
+    name: my_user_system
