完成部署工作 (#18)
* 完成初始化基本功能

* 封装响应体

* 完成响应封装

* 修复idea文件bug,增加分页

* 架构优化

* 架构再优化

* README

* README

* 增加后台管理

* 增加后台管理模块

* 后台管理新增权限系统

* 后台管理完成登录登出、处理异常功能

* 完成头像上传及其获取功能，完成后台接口设计

* 完成部署前置工作

* 修复遗漏

* 修复遗漏

* 增加根据时间查询回复

* 完成部署工作

--- a/epidemic_syscontrol_back/epidemic-syscontrol-admin/src/main/resources/application-dev.yml
+++ b/epidemic_syscontrol_back/epidemic-syscontrol-admin/src/main/resources/application-dev.yml
@@ -35,7 +35,8 @@ spring:
       connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
-
+  application:
+    name: my_sys_control
 
 file:
   location: D:/avatar
