更新匿名访问规则

--- a/epidemic_back/epidemic-admin/src/main/resources/application-prod.yml
+++ b/epidemic_back/epidemic-admin/src/main/resources/application-prod.yml
@@ -26,6 +26,7 @@ spring:
         max-idle: 8
         min-idle: 0
     timeout: 5000
+    password: hoshino12@!
   datasource:
     druid:
       username: root
