--- a/docker-deploy/docker-compose.yml
+++ b/docker-deploy/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: mysyscontrol
     build:
       context: ./sys_control
-      dockerfile: sys_control/Dockerfile-sysControl
+      dockerfile: Dockerfile-sysControl
     ports:
       - "11451:11451"
     expose:
@@ -25,7 +25,7 @@ services:
     container_name: myusersystem
     build:
       context: ./user_system
-      dockerfile: user_system/Dockerfile-userSystem
+      dockerfile: Dockerfile-userSystem
     ports:
       - "8088:8088"
     expose:
@@ -38,8 +38,11 @@ services:
       - "host.docker.internal:host-gateway"
 
   redis:
-    image: "myredis"
+    image: myredis
     container_name: myredis
+    build:
+      context: ./myredis
+      dockerfile: Dockerfile
     networks:
       - back_network
     ports:
